--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ p {
 
 a {
   cursor: pointer;
-  color: #1976d2;
+  color: #3a6897;
   text-decoration: none;
 }
 
@@ -77,7 +77,7 @@ label {
   border-radius: 2px;
   font-size: 14px;
   cursor: pointer;
-  background-color: #1976d2;
+  background-color: #3a6897;
   color: white;
   border: none;
 }
@@ -109,7 +109,7 @@ label {
 app-top-bar {
   width: 100%;
   height: 68px;
-  background-color: #1976d2;
+  background-color: #3a6897;
   padding: 16px;
   display: flex;
   flex-direction: row;
