--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,14 @@
-<h2>Available Products</h2>
+<h2>Welcome to DWH webshop!</h2>
 
+<h3> Here are the available products: </h3>
 <div *ngFor="let product of products">
-  <h3>
+  <div>
+    <i class="material-icons">favorite_border</i>
     <a [title]="product.name + ' details'" 
-       [routerLink]="['/products', product.id]">>
+       [routerLink]="['/products', product.id]">
       {{ product.name }}
     </a>
-  </h3>
+  </div>
 
   <p *ngIf="product.description"> {{ product.description }}</p>
 </div>
