--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,11 @@
 <a [routerLink]="['/']">
-  <h1>SimCorp Webshop</h1>
+  <div class="button fancy-button">  
+    <i class="material-icons">home</i>
+  </div>
+</a>
+
+<a [routerLink]="['/']">
+  <h1> DWH Webshop </h1>
 </a>
 
 <a routerLink="/cart" class="button fancy-button">
