3 files modified, 1 deleted

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -2,9 +2,18 @@
 
 <div *ngIf="product">
   <h3>{{ product.name }}</h3>
-  <img src="assets/img/1.jpg" alt="image">
+  <div class="product-image">
+    <img [src]="product.img" alt="image">
+  </div>
   <h4>Price: {{ product.price | currency :'DKK' }} kr</h4>
   <p>{{ product.description }}</p>
+
+  <a [routerLink]="['/']">
+    <div class="button fancy-button">  
+      <i class="material-icons">keyboard_backspace</i>
+    </div>
+  </a>
+
 
   <button type="button" (click)="addToCart(product)">Add to cart</button>
 </div>
