--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,29 +1,28 @@
-<h3>Cart</h3>
+<h2>Cart:</h2>
 
-<p>
-  <a routerLink="/shipping">Shipping Prices</a>
-</p>
 
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
-  <span>{{ item.price | currency :'DKK' }}</span>
+  <span>{{ item.price | currency: 'DKK' }}</span>
 </div>
 
+<h2>Deliver to:</h2>
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
   <div>
     <label for="name"> Name </label>
-    <input id="name" type="text" formControlName="name" />
+    <input class="form-control" id="name" type="text" formControlName="name" required/>
   </div>
 
   <div>
     <label for="email"> Email </label>
-    <input id="email" type="text" formControlName="email" />
+    <input class="form-control" id="email" type="text" formControlName="email" required />
   </div>
 
   <div>
     <label for="address"> Address </label>
-    <input id="address" type="text" formControlName="address" />
+    <input class="form-control" id="address" type="text" formControlName="address" required/>
   </div>
 
-  <button class="button" type="submit">Purchase</button>
+  <button class="button" [disabled]="checkoutForm.invalid" type="submit">Purchase</button>
+
 </form>
